added some elements to HTML and some style to the header and body in style.css; initialized some variables to connect DOM elements to script.js and created a test array of objects to be questions, choices, and answers

--- a/index.html
+++ b/index.html
@@ -9,8 +9,20 @@
 </head>
 <body>
     <h1>
-        Timed, Multiple-Choice, JavaScript Code Quiz
+        JavaScript Code Quiz
     </h1>
+    <div>
+        <h3 id = "highScores"></h3>
+        <h3 id = "timer"></h3>
+        <h3 id = "score"></h3>
+    </div>
+    <div>
+        <p id = "questions"></p>
+        <button id = "choice1"></button>
+        <button id = "choice2"></button>
+        <button id = "choice3"></button>
+        <button id = "choice4"></button>
+    </div>
     <script src = 'script.js'></script>
 </body>
 </html>
