added quiz elements with a class of .hide into HTML; added a block in  startButton eventlistener to set attribute of quiz elements to show; block is working

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
         <h1 class = "welcome" id = "welcomeHeader">
             Coding Quiz Challenge
         </h1>
-        <p id = "questions"></p>
+        <p class = 'hide quiz' id = "questions">HELLO WORLD</p>
     </div>
     <div>
         <p class = "welcome" id = "welcomeIntro">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 15 seconds!</p>
-        <button id = "choice1"></button>
-        <button id = "choice2"></button>
-        <button id = "choice3"></button>
-        <button id = "choice4"></button>
+        <button class = 'hide quiz' id = "choice1">A) BUTTON</button>
+        <button class = 'hide quiz' id = "choice2">B) BUTTON</button>
+        <button class = 'hide quiz' id = "choice3">C) BUTTON</button>
+        <button class = 'hide quiz' id = "choice4">D) BUTTON</button>
     </div>
     <div>
         <button class = "welcome" id = "start">Start Quiz!</button>
