started askQuestion function with adding  question and choice text to DOM elements that appear when start button is pushed

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
     </div>
     <div>
         <p class = "welcome" id = "welcomeIntro">Try to answer the following code-related questions within the time limit. Keep in mind that incorrect answers will penalize your score/time by 15 seconds!</p>
-        <button class = 'hide quiz' id = "choice1">A) BUTTON</button>
-        <button class = 'hide quiz' id = "choice2">B) BUTTON</button>
-        <button class = 'hide quiz' id = "choice3">C) BUTTON</button>
-        <button class = 'hide quiz' id = "choice4">D) BUTTON</button>
+        <button class = 'hide quiz'><span id = 'choiceA'>A) BUTTON</span></button>
+        <button class = 'hide quiz'><span id = 'choiceB'>B) BUTTON</span></button>
+        <button class = 'hide quiz'><span id = 'choiceC'>C) BUTTON</span></button>
+        <button class = 'hide quiz'><span id = 'choiceD'>D) BUTTON</span></button>
     </div>
     <div>
         <button class = "welcome" id = "start">Start Quiz!</button>
+        <p class = "hide quiz" id = "response"></p>
     </div>
     <script src = 'script.js'></script>
 </body>
