--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <!-- Div for quiz elements like questions and answer buttons and responses; these are hidden until user clicks start button -->
     <div class = 'hide quiz'>
         <h3 class = 'hide quiz' id = "questions">HELLO WORLD</h3>
-        <button class = 'hide quiz choice' id = 'choiceA'>A) BUTTON</button>
-        <button class = 'hide quiz choice' id = 'choiceB'>B) BUTTON</button>
-        <button class = 'hide quiz choice' id = 'choiceC'>C) BUTTON</button>
-        <button class = 'hide quiz choice' id = 'choiceD'>D) BUTTON</button>
+        <button class = 'hide quiz choice' id = 'choiceA'>A)</button>
+        <button class = 'hide quiz choice' id = 'choiceB'>B)</button>
+        <button class = 'hide quiz choice' id = 'choiceC'>C)</button>
+        <button class = 'hide quiz choice' id = 'choiceD'>D)</button>
         <p class = "hide quiz" id = "response"></p>
     </div>
     <script src = 'script.js'></script>
