got scoreboard displaying and updating with correct/incorrect choices

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     </div>    
     <!-- Div for quiz elements like questions and answer buttons and responses; these are hidden until user clicks start button -->
     <div class = 'hide quiz'>
-        <h3 class = 'hide quiz' id = "questions">HELLO WORLD</h3>
+        <h3 class = 'hide quiz' id = "scoreboard"></h3>
+        <h3 class = 'hide quiz' id = "questions"></h3>
         <button class = 'hide quiz choice' id = 'choiceA'>A)</button>
         <button class = 'hide quiz choice' id = 'choiceB'>B)</button>
         <button class = 'hide quiz choice' id = 'choiceC'>C)</button>
