defined finalScore as a global variable so I could reuse it in my submit button's eventlistener; created an initials id on the form input for user initials and created a variable to store into local storage along with the final score

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h5 class = 'quizEnd hide' id = "yourScore"></h5>
         <form class = 'quizEnd hide'>
             <label>Enter Initials: </label>
-            <input type = "text">
+            <input id = "initials" name = "initials" type = "text">
             <input id = "submitScore" type = "submit" value = "SUBMIT">
         </form>
     </div>
