--- a/index.html
+++ b/index.html
@@ -28,26 +28,32 @@
             <button class = "welcome" id = "startButton">Start Quiz!</button>
         </div>
         <!-- Div for quiz elements like questions and answer buttons and responses; these are hidden until user clicks start button -->
-        <div id = 'quizRow'>
-            <h3 class = 'hide quiz' id = "scoreboard"></h3>
-            <h3 class = 'hide quiz' id = "questions"></h3>
-            <button class = 'hide quiz' id = 'choiceA'></button>
-            <button class = 'hide quiz' id = 'choiceB'></button>
-            <button class = 'hide quiz' id = 'choiceC'></button>
-            <button class = 'hide quiz' id = 'choiceD'></button>
+        <div id = "quizRow">
+            <h3 class = "hide quiz" id = "scoreboard"></h3>
+            <h3 class = "hide quiz" id = "questions"></h3>
+            <button class = "hide quiz" id = "choiceA"></button>
+            <button class = "hide quiz" id = "choiceB"></button>
+            <button class = "hide quiz" id = "choiceC"></button>
+            <button class = "hide quiz" id = "choiceD"></button>
             <hr class = "hide quiz">
             <p class = "hide quiz" id = "response"></p>
         </div>
         <div class = "quizEnd" id = "quizEndRow">
-            <h3 class = 'quizEnd hide'>All done!</h3>
-            <h5 class = 'quizEnd hide' id = "yourScore"></h5>
-            <form class = 'quizEnd hide'>
+            <h2 class = "quizEnd hide">All done!</h2>
+            <h5 class = "quizEnd hide" id = "yourScore"></h5>
+            <form class = "quizEnd hide">
                 <label>Enter Initials: </label>
                 <input id = "initials" name = "initials" type = "text">
                 <input id = "submitScore" type = "submit" value = "SUBMIT">
             </form>
         </div>
+        <div id = "scoreScreen" id = "scoreRow">
+            <h2 class = "hide scoreScreen">High Scores</h2>
+            <button class = "hide scoreScreen" id = "backButton">Go Back</button>
+            <button class = "hide scoreScreen" id = "clearButton">Clear Scores</button>
+            <p class = "hide scoreScreen" id = "response"></p>
+        </div>
     </div>
-    <script src = 'script.js'></script>
+    <script src = "script.js"></script>
 </body>
 </html>
