fixed some styling and how high scores displayed or were hidden

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </form>
         </div>
     </div>
-    <div id = "scoreScreen" id = "scoreRow">
+    <div class = "scoreScreen" id = "scoreRow">
         <h2 class = "hide scoreScreen">High Scores</h2>
         <div id = "highScoreDisplay"></div>
         <button class = "hide scoreScreen" id = "backButton">Go Back</button>
